# c-simple-sessions

./: .gitignore  EXERCISES.md  README.md
.githooks/: pre-commit
arrays/: prod.c  prod.h
arrays/tests/: test.c
bowling-game/: README.md  prod.c  prod.h
bowling-game/tests/: test.c
cmocka_test/: .gitignore  CMakeLists.txt  Makefile  README.md  fizzBuzzTest.c
cmocka_test/tests/: CMakeLists.txt
conan_test/: .gitignore  CMakeLists.txt  README.md  main.c
course_examples_1/: .gitignore  CMakeLists.txt  main.c
execute_by_name/: README.md
linked_list/: CMakeLists.txt  main.c  prod.c  prod.h  test.c
macro_execute_function/: main.c
merge_sort/: Makefile  README.md  mergesort.c  mergesort.h  mergesortTest.c  tests
mit-introduction-to-c-and-cpp/lecture4-data-structures-and-debugging/: helper.c
pointers_1/: .gitignore  CMakeLists.txt  Makefile  README.md  by_name.empty  by_name.template  main.c  prod.c  prod.h
pointers_1/interpolator/: CMakeLists.txt  interpolate_template.c  interpolate_template.h  main.c
recursion/: prod.c  prod.h
recursion/tests/: test.c
skeleton/: fizzBuzzTest.c  fizzbuzz.c
skeleton_cmake/: README.md  main.c  munit.c  test.c  test_documentation.c
solutions/maximum/: Makefile  main.c  maximumTest.c
solutions/ubst/: Makefile  bst.c  bst.h  maximum.c  maximum.h  test.c
thinking-driven-testing/: CMakeLists.txt  README.md  prod.c  prod.h  test.c
trie/: .gitignore  CMakeLists.txt  README.md  main.c  munit.h  prod.c  prod.h  test.c
trie/resources/: words_unique_100.txt
